se agrega cuadre de caja a las ordenes de trabajo

--- a/src/app/components/gestion-orden/gestion-orden.component.html
+++ b/src/app/components/gestion-orden/gestion-orden.component.html
@@ -350,6 +350,16 @@
         </div>
       </div>
 
+      <!-- Button trigger modal .d-none se repete esta parte para todos las pantallas de opciones de punto de venta dia -->
+      <button type="button" class="btn btn-primary d-none" id="cuadreCajaModal" #cuadreCajaModal data-toggle="modal"
+        data-target="#cuadreCajaModa">
+        Launch demo modal
+      </button>
+      <!-- Modal cuadre de caja -->
+      <div class="modal fade" id="cuadreCajaModa" tabindex="-1" role="dialog" aria-labelledby="cuadreCajaModalLabel"
+        aria-hidden="true">
+        <app-cuadre-caja></app-cuadre-caja>
+      </div>
 
       <!-- Button trigger modal .d-none se repete esta parte para todos las pantallas de opciones de punto de venta dia -->
       <button type="button" class="btn btn-primary d-none" id="abonoModal" #abonoModal data-toggle="modal"
