se agrega campo consignacion en cuadre de caja y ademas se agrega tipo de pago en ordenes de trabajo

--- a/src/app/components/cuadre-caja/cuadre-caja.component.html
+++ b/src/app/components/cuadre-caja/cuadre-caja.component.html
@@ -171,6 +171,16 @@
             </div>
             <div class="row">
                 <div class="col col-md-3">
+                    consignaciones
+                </div>
+                <div class="col col-md-3">
+                    <input class="form-control" [(ngModel)]="cuadreCajaVo.consignaciones" (blur)="calcularEnCaja()" readonly>
+                </div>
+                <div class="col col-md-3"></div>
+                <div class="col col-md-3"></div>
+            </div>
+            <div class="row">
+                <div class="col col-md-3">
                     Cartera
                 </div>
                 <div class="col col-md-3">
